ecmascript/parser/tests/test262-error-references/fail/0dbe57298be12eac.js.stderr
error: Trailing comma is not allowed
 --> $DIR/tests/test262-parser/fail/0dbe57298be12eac.js:1:6
  |
1 | var x,;
  |      ^

